--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="a"></div>
+      <div class="a">
+        <h1></h1>
+      </div>
       <div class="b"></div>
       <div class="c"></div>
     </div>
